fscMigration/force-app/main/default/objects/Batch_Transaction_Detail__c/Batch_Transaction_Detail__c.object-meta.xml
<CustomObject>
    <label>Batch Transaction Detail</label>
    <nameField>
        <displayFormat>Batch-{0000}</displayFormat>
        <label>Batch Transaction Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Transaction Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>