fscMigration/force-app/main/default/objects/Batch_Transaction_Detail__c/fields/Batch_Failed__c.field-meta.xml
<CustomField>
    <fullName>Batch_Failed__c</fullName>
    <label>Batch Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>