fscMigration/force-app/main/default/objects/Batch_Transaction_Detail__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <label>Batch Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>