fscMigration/force-app/main/default/objects/Batch_Transaction_Detail__c/fields/Batch_Success__c.field-meta.xml
<CustomField>
    <fullName>Batch_Success__c</fullName>
    <label>Batch Success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>