fscMigration/force-app/main/default/objects/Batch_Transaction_Detail__c/fields/isSuccess__c.field-meta.xml
<CustomField>
    <fullName>isSuccess__c</fullName>
    <formula>IF( Batch_Success__c  =  Total_Batch__c , true, false)</formula>
    <label>isSuccess</label>
    <type>Checkbox</type>
</CustomField>