fscMigration/force-app/main/default/objects/Batch_Transaction_Detail__c/fields/Object_setup_name__c.field-meta.xml
<CustomField>
    <fullName>Object_setup_name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Object setup name</label>
    <referenceTo>Object_setup__c</referenceTo>
    <relationshipLabel>Batch Transaction Details</relationshipLabel>
    <relationshipName>Batch_Transaction_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>